--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@
 #  in the COPYING file in the root directory of this source tree).
 #  You may select, at your option, one of the above-listed licenses.
 
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.10.1)
 string(ASCII 27 ESC)
 macro(WARNING_LOG MESSAGE)
   message("-- ${ESC}[31m${MESSAGE}${ESC}[m")
@@ -377,6 +377,11 @@ endif()
 if(DEFINED ENV{SKIP_CARVER})
   set(SKIP_CARVER TRUE)
   add_definitions(-DSKIP_CARVER=1)
+endif()
+set(SKIP_BRO TRUE)
+if(DEFINED ENV{SKIP_BRO} AND "$ENV{SKIP_BRO}" STREQUAL "False")
+  # Bro integration does not work on Windows or FreeBSD.
+  set(SKIP_BRO FALSE)
 endif()
 
 # The kernel builds are skipped by default.
